[package]
name = "simple_station_game"
version = "0.1.0"
authors = ["Syst3mz <ethanansburgstda@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
inquire = "0.3.0-alpha.2"
strum = "0.24.0"
strum_macros = "0.24.0"
rand_derive2 = "0.1.17"
colored = "2.0.0"